# shopify_api_wrapper

./: pyproject.toml
shopify/api/graphql/: collections.py  inventory.py
