[tool.poetry]
name = "shopify_api_wrapper"
version = "0.1.0"
description = ""
authors = ["Vick Mu <arbi3400@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
ipython = "^8.22.1"
packaging = "^23.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
